--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
 
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
+  <button onclick="show('agenda')">🕒</button>
+  <button onclick="show('clientes')">👤</button>
+  <button onclick="show('planos')">💳</button>
+  <button onclick="show('produtos')">📦</button>
+  <button onclick="show('despesas')">🧾</button>
   <button onclick="show('mensal')">📆</button>
 </div>
 
 <div class="content">
 
+<!-- PDV -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -28,6 +34,7 @@
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
+  <select id="cliente"></select>
   <select id="produto"></select>
 
   <select id="pagamento">
@@ -50,10 +57,64 @@
   <div id="resumoCaixa"></div>
 </div>
 
+<!-- AGENDA -->
+<div id="agenda" class="section">
+  <h2>Agenda</h2>
+  <input type="date" id="dataAgenda">
+  <select id="horaAgenda"></select>
+  <select id="clienteAgenda"></select>
+  <select id="servicoAgenda"></select>
+  <button onclick="salvarAgendamento()">Agendar</button>
+  <ul id="listaAgenda"></ul>
+</div>
+
+<!-- CLIENTES -->
+<div id="clientes" class="section">
+  <h2>Clientes</h2>
+  <input id="nomeCliente" placeholder="Nome">
+  <select id="planoCliente"></select>
+  <button onclick="salvarCliente()">Salvar</button>
+  <ul id="listaClientes"></ul>
+</div>
+
+<!-- PLANOS -->
+<div id="planos" class="section">
+  <h2>Planos</h2>
+  <input id="nomePlano" placeholder="Nome">
+  <input id="valorPlano" type="number" placeholder="Valor">
+  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+  <select id="tipoPlano"></select>
+  <button onclick="salvarPlano()">Salvar</button>
+  <ul id="listaPlanos"></ul>
+</div>
+
+<!-- PRODUTOS -->
+<div id="produtos" class="section">
+  <h2>Produtos / Serviços</h2>
+  <input id="nomeProd" placeholder="Nome">
+  <input id="valorProd" type="number" placeholder="Valor">
+  <select id="tipoProd">
+    <option value="produto">Produto</option>
+    <option value="servico">Serviço</option>
+  </select>
+  <button onclick="salvarProduto()">Salvar</button>
+  <ul id="listaProdutos"></ul>
+</div>
+
+<!-- DESPESAS -->
+<div id="despesas" class="section">
+  <h2>Despesas</h2>
+  <input id="descDespesa" placeholder="Descrição">
+  <input id="valorDespesa" type="number" placeholder="Valor">
+  <button onclick="salvarDespesa()">Salvar</button>
+  <ul id="listaDespesas"></ul>
+</div>
+
+<!-- MENSAL -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
-  <button onclick="gerarRelatorioMensal()">Gerar PDF Mensal</button>
+  <button onclick="gerarRelatorioMensal()">Gerar</button>
   <div id="resumoMensal"></div>
 </div>
 
