--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <div class="content">
 
+<!-- ================= PDV ================= -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -49,6 +50,7 @@
   <button onclick="usarPlano()">Usar Plano</button>
 
   <table id="carrinho"></table>
+
   <p class="total">Total: R$ <span id="total">0.00</span></p>
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
@@ -57,8 +59,69 @@
   <div id="resumoCaixa"></div>
 </div>
 
-<!-- O RESTO DO HTML PERMANECE IGUAL AO SEU -->
-<!-- agenda, clientes, planos, produtos, despesas, mensal -->
+<!-- ================= AGENDA ================= -->
+<div id="agenda" class="section">
+  <h2>Agenda</h2>
+  <input type="date" id="dataAgenda">
+  <select id="horaAgenda"></select>
+  <select id="clienteAgenda"></select>
+  <select id="servicoAgenda"></select>
+  <button onclick="salvarAgendamento()">Agendar</button>
+  <ul id="listaAgenda"></ul>
+</div>
+
+<!-- ================= CLIENTES ================= -->
+<div id="clientes" class="section">
+  <h2>Clientes</h2>
+  <input id="nomeCliente" placeholder="Nome">
+  <select id="planoCliente"></select>
+  <button onclick="salvarCliente()">Salvar</button>
+  <ul id="listaClientes"></ul>
+</div>
+
+<!-- ================= PLANOS ================= -->
+<div id="planos" class="section">
+  <h2>Planos</h2>
+  <input id="nomePlano" placeholder="Nome do plano">
+  <input id="valorPlano" type="number" placeholder="Valor do plano">
+  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+  <select id="tipoPlano"></select>
+  <button onclick="salvarPlano()">Salvar</button>
+  <ul id="listaPlanos"></ul>
+</div>
+
+<!-- ================= PRODUTOS / SERVIÇOS ================= -->
+<div id="produtos" class="section">
+  <h2>Produtos / Serviços</h2>
+  <input id="nomeProd" placeholder="Nome">
+  <input id="valorProd" type="number" placeholder="Valor">
+  <select id="tipoProd">
+    <option value="produto">Produto</option>
+    <option value="servico">Serviço</option>
+  </select>
+  <button onclick="salvarProduto()">Salvar</button>
+  <ul id="listaProdutos"></ul>
+</div>
+
+<!-- ================= DESPESAS ================= -->
+<div id="despesas" class="section">
+  <h2>Despesas</h2>
+  <input id="descDespesa" placeholder="Descrição">
+  <input id="valorDespesa" type="number" placeholder="Valor">
+  <button onclick="salvarDespesa()">Salvar</button>
+  <ul id="listaDespesas"></ul>
+</div>
+
+<!-- ================= RELATÓRIO MENSAL ================= -->
+<div id="mensal" class="section">
+  <h2>Relatório Mensal</h2>
+  <input type="month" id="mesRelatorio">
+  <button onclick="gerarRelatorioMensal()">Gerar</button>
+  <div id="resumoMensal"></div>
+</div>
+
+</div>
+</div>
 
 <script src="script.js"></script>
 </body>
