--- a/index.html
+++ b/index.html
@@ -6,123 +6,128 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="style.css">
-<script src="jspdf.umd.min.js"></script>
 </head>
 
 <body>
+
 <div class="overlay">
 
-<div class="menu">
-  <button onclick="show('pdv')">💈</button>
-  <button onclick="show('agenda')">🕒</button>
-  <button onclick="show('clientes')">👤</button>
-  <button onclick="show('planos')">💳</button>
-  <button onclick="show('produtos')">📦</button>
-  <button onclick="show('despesas')">🧾</button>
-  <button onclick="show('mensal')">📆</button>
-</div>
-
-<div class="content">
-
-<!-- ================= PDV ================= -->
-<div id="pdv" class="section active">
-  <h2>PDV / Caixa</h2>
-  <p id="statusCaixa"></p>
-
-  <div id="abrirBox">
-    <input id="valorAbertura" type="number" placeholder="Valor de abertura">
-    <button onclick="abrirCaixa()">Abrir Caixa</button>
+  <!-- MENU -->
+  <div class="menu">
+    <button onclick="show('pdv')">💈</button>
+    <button onclick="show('agenda')">🕒</button>
+    <button onclick="show('clientes')">👤</button>
+    <button onclick="show('planos')">💳</button>
+    <button onclick="show('produtos')">📦</button>
+    <button onclick="show('despesas')">🧾</button>
+    <button onclick="show('mensal')">📆</button>
   </div>
 
-  <select id="cliente"></select>
-  <select id="produto"></select>
+  <!-- CONTEÚDO -->
+  <div class="content">
 
-  <select id="pagamento">
-    <option value="dinheiro">Dinheiro</option>
-    <option value="pix">Pix</option>
-    <option value="cartao">Cartão</option>
-  </select>
+    <!-- PDV -->
+    <div id="pdv" class="section active">
+      <h2>PDV / Caixa</h2>
+      <p id="statusCaixa"></p>
 
-  <input id="valorPago" type="number" placeholder="Valor pago (dinheiro)">
-  <p id="trocoInfo"></p>
+      <div id="abrirBox">
+        <input id="valorAbertura" type="number" placeholder="Valor de abertura">
+        <button onclick="abrirCaixa()">Abrir Caixa</button>
+      </div>
 
-  <button onclick="addItem()">Adicionar</button>
-  <button onclick="usarPlano()">Usar Plano</button>
+      <select id="cliente"></select>
+      <select id="produto"></select>
 
-  <table id="carrinho"></table>
+      <select id="pagamento">
+        <option value="dinheiro">Dinheiro</option>
+        <option value="pix">Pix</option>
+        <option value="cartao">Cartão</option>
+      </select>
 
-  <p class="total">Total: R$ <span id="total">0.00</span></p>
+      <input id="valorPago" type="number" placeholder="Valor pago (dinheiro)">
 
-  <button onclick="finalizarVenda()">Finalizar Venda</button>
-  <button onclick="fecharCaixa()" class="btn-danger">Fechar Caixa</button>
+      <button onclick="addItem()">Adicionar</button>
+      <button onclick="usarPlano()">Usar Plano</button>
 
-  <div id="resumoCaixa"></div>
+      <table id="carrinho"></table>
+
+      <p class="total">
+        Total: R$ <span id="total">0.00</span>
+      </p>
+
+      <button onclick="finalizarVenda()">Finalizar Venda</button>
+      <button onclick="fecharCaixa()" class="btn-danger">Fechar Caixa</button>
+
+      <div id="resumoCaixa"></div>
+    </div>
+
+    <!-- AGENDA -->
+    <div id="agenda" class="section">
+      <h2>Agenda</h2>
+      <input type="date" id="dataAgenda">
+      <select id="horaAgenda"></select>
+      <select id="clienteAgenda"></select>
+      <select id="servicoAgenda"></select>
+      <button onclick="salvarAgendamento()">Agendar</button>
+      <ul id="listaAgenda"></ul>
+    </div>
+
+    <!-- CLIENTES -->
+    <div id="clientes" class="section">
+      <h2>Clientes</h2>
+      <input id="nomeCliente" placeholder="Nome">
+      <select id="planoCliente"></select>
+      <button onclick="salvarCliente()">Salvar</button>
+      <ul id="listaClientes"></ul>
+    </div>
+
+    <!-- PLANOS -->
+    <div id="planos" class="section">
+      <h2>Planos</h2>
+      <input id="nomePlano" placeholder="Nome do plano">
+      <input id="valorPlano" type="number" placeholder="Valor">
+      <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+      <select id="tipoPlano"></select>
+      <button onclick="salvarPlano()">Salvar</button>
+      <ul id="listaPlanos"></ul>
+    </div>
+
+    <!-- PRODUTOS -->
+    <div id="produtos" class="section">
+      <h2>Produtos / Serviços</h2>
+      <input id="nomeProd" placeholder="Nome">
+      <input id="valorProd" type="number" placeholder="Valor">
+      <select id="tipoProd">
+        <option value="produto">Produto</option>
+        <option value="servico">Serviço</option>
+      </select>
+      <button onclick="salvarProduto()">Salvar</button>
+      <ul id="listaProdutos"></ul>
+    </div>
+
+    <!-- DESPESAS -->
+    <div id="despesas" class="section">
+      <h2>Despesas</h2>
+      <input id="descDespesa" placeholder="Descrição">
+      <input id="valorDespesa" type="number" placeholder="Valor">
+      <button onclick="salvarDespesa()">Salvar</button>
+      <ul id="listaDespesas"></ul>
+    </div>
+
+    <!-- RELATÓRIO MENSAL -->
+    <div id="mensal" class="section">
+      <h2>Relatório Mensal</h2>
+      <input type="month" id="mesRelatorio">
+      <button onclick="gerarRelatorioMensal()">Gerar</button>
+      <div id="resumoMensal"></div>
+    </div>
+
+  </div>
 </div>
 
-<!-- ================= AGENDA ================= -->
-<div id="agenda" class="section">
-  <h2>Agenda</h2>
-  <input type="date" id="dataAgenda">
-  <select id="horaAgenda"></select>
-  <select id="clienteAgenda"></select>
-  <select id="servicoAgenda"></select>
-  <button onclick="salvarAgendamento()">Agendar</button>
-  <ul id="listaAgenda"></ul>
-</div>
-
-<!-- ================= CLIENTES ================= -->
-<div id="clientes" class="section">
-  <h2>Clientes</h2>
-  <input id="nomeCliente" placeholder="Nome">
-  <select id="planoCliente"></select>
-  <button onclick="salvarCliente()">Salvar</button>
-  <ul id="listaClientes"></ul>
-</div>
-
-<!-- ================= PLANOS ================= -->
-<div id="planos" class="section">
-  <h2>Planos</h2>
-  <input id="nomePlano" placeholder="Nome do plano">
-  <input id="valorPlano" type="number" placeholder="Valor do plano">
-  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
-  <select id="tipoPlano"></select>
-  <button onclick="salvarPlano()">Salvar</button>
-  <ul id="listaPlanos"></ul>
-</div>
-
-<!-- ================= PRODUTOS / SERVIÇOS ================= -->
-<div id="produtos" class="section">
-  <h2>Produtos / Serviços</h2>
-  <input id="nomeProd" placeholder="Nome">
-  <input id="valorProd" type="number" placeholder="Valor">
-  <select id="tipoProd">
-    <option value="produto">Produto</option>
-    <option value="servico">Serviço</option>
-  </select>
-  <button onclick="salvarProduto()">Salvar</button>
-  <ul id="listaProdutos"></ul>
-</div>
-
-<!-- ================= DESPESAS ================= -->
-<div id="despesas" class="section">
-  <h2>Despesas</h2>
-  <input id="descDespesa" placeholder="Descrição">
-  <input id="valorDespesa" type="number" placeholder="Valor">
-  <button onclick="salvarDespesa()">Salvar</button>
-  <ul id="listaDespesas"></ul>
-</div>
-
-<!-- ================= RELATÓRIO MENSAL ================= -->
-<div id="mensal" class="section">
-  <h2>Relatório Mensal</h2>
-  <input type="month" id="mesRelatorio">
-  <button onclick="gerarRelatorioMensal()">Gerar</button>
-  <div id="resumoMensal"></div>
-</div>
-
-</div>
-</div>
-
+<!-- ⚠️ IMPORTANTE: JS NO FINAL, SEM MODULE -->
 <script src="script.js"></script>
+
 </body>
 </html>
