--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <button onclick="show('produtos')">📦</button>
     <button onclick="show('despesas')">🧾</button>
     <button onclick="show('mensal')">📆</button>
-  </div>
+  <button onclick="renovarPlanoCliente()">Renovar Plano</button>
+</div>
 
   <!-- CONTEÚDO -->
   <div class="content">
