--- a/index.html
+++ b/index.html
@@ -1,164 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>PDV Barbearia</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="jspdf.umd.min.js"></script>
-
-<style>
-body{
-  margin:0;
-  font-family:Arial;
-  background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
-  background-size:cover;
-  background-position:center
-}
-.overlay{background:rgba(0,0,0,.72);min-height:100vh}
-.menu{
-  position:fixed;
-  left:0;top:0;bottom:0;
-  width:70px;
-  background:rgba(0,0,0,.45);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  padding-top:20px
-}
-.menu button{
-  background:none;
-  border:none;
-  color:#f1c40f;
-  font-size:22px;
-  margin:15px 0;
-  cursor:pointer
-}
-.content{margin-left:90px;padding:20px;color:#fff}
-.section{display:none}
-.section.active{display:block}
-input,select,button{
-  padding:8px;
-  border-radius:6px;
-  border:none;
-  margin:4px 0
-}
-button{cursor:pointer;font-weight:bold}
-.total{font-size:20px;color:#2ecc71}
-.hidden{display:none}
-canvas{background:#111;border-radius:8px;margin-top:10px}
-ul{padding-left:20px}
-table{width:100%}
-</style>
+  <meta charset="UTF-8">
+  <title>PDV Barbearia</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<div class="overlay">
 
-<div class="menu">
-  <button onclick="show('pdv')">💈</button>
-  <button onclick="show('agenda')">🕒</button>
-  <button onclick="show('clientes')">👤</button>
-  <button onclick="show('planos')">💳</button>
-  <button onclick="show('produtos')">📦</button>
-  <button onclick="show('despesas')">🧾</button>
-  <button onclick="show('mensal')">📆</button>
-</div>
+  <div class="container">
 
-<div class="content">
+    <h1>💈 PDV Barbearia</h1>
 
-<!-- PDV -->
-<div id="pdv" class="section active">
-  <h2>PDV / Caixa</h2>
-  <p id="statusCaixa"></p>
+    <!-- ABERTURA DE CAIXA -->
+    <div id="aberturaCaixa" class="card">
+      <h2>Abertura de Caixa</h2>
 
-  <div id="abrirBox">
-    <input id="valorAbertura" type="number" placeholder="Valor de abertura">
-    <button onclick="abrirCaixa()">Abrir Caixa</button>
+      <label>Valor inicial (R$)</label>
+      <input type="number" id="valorInicial" placeholder="Ex: 100">
+
+      <button onclick="abrirCaixa()">Abrir Caixa</button>
+    </div>
+
+    <!-- CAIXA ABERTO -->
+    <div id="caixaAberto" class="card hidden">
+      <h2>Caixa Aberto ✅</h2>
+
+      <p><strong>Data:</strong> <span id="dataAbertura"></span></p>
+      <p><strong>Valor Inicial:</strong> R$ <span id="valorAbertura"></span></p>
+
+      <button class="fechar" onclick="fecharCaixa()">Fechar Caixa</button>
+    </div>
+
   </div>
 
-  <select id="cliente"></select>
-  <select id="produto"></select>
-
-  <select id="pagamento">
-    <option value="dinheiro">Dinheiro</option>
-    <option value="pix">Pix</option>
-    <option value="cartao">Cartão</option>
-  </select>
-
-  <button onclick="addItem()">Adicionar</button>
-
-  <table id="carrinho"></table>
-  <p class="total">Total: R$ <span id="total">0.00</span></p>
-
-  <button onclick="finalizarVenda()">Finalizar Venda</button>
-</div>
-
-<!-- AGENDA -->
-<div id="agenda" class="section">
-  <h2>Agenda (15 em 15)</h2>
-  <input type="date" id="dataAgenda">
-  <select id="horaAgenda"></select>
-  <select id="clienteAgenda"></select>
-  <select id="servicoAgenda"></select>
-  <button onclick="salvarAgendamento()">Agendar</button>
-  <ul id="listaAgenda"></ul>
-</div>
-
-<!-- CLIENTES -->
-<div id="clientes" class="section">
-  <h2>Clientes</h2>
-  <input id="nomeCliente" placeholder="Nome">
-  <select id="planoCliente"></select>
-  <button onclick="salvarCliente()">Salvar</button>
-  <ul id="listaClientes"></ul>
-</div>
-
-<!-- PLANOS -->
-<div id="planos" class="section">
-  <h2>Planos</h2>
-  <input id="nomePlano" placeholder="Nome">
-  <input id="valorPlano" type="number" placeholder="Valor">
-  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
-  <select id="tipoPlano"></select>
-  <button onclick="salvarPlano()">Salvar</button>
-  <ul id="listaPlanos"></ul>
-</div>
-
-<!-- PRODUTOS -->
-<div id="produtos" class="section">
-  <h2>Produtos / Serviços</h2>
-  <input id="nomeProd" placeholder="Nome">
-  <input id="valorProd" type="number" placeholder="Valor">
-  <select id="tipoProd">
-    <option value="produto">Produto</option>
-    <option value="servico">Serviço</option>
-  </select>
-  <button onclick="salvarProduto()">Salvar</button>
-  <ul id="listaProdutos"></ul>
-</div>
-
-<!-- DESPESAS -->
-<div id="despesas" class="section">
-  <h2>Despesas</h2>
-  <input id="descDespesa" placeholder="Descrição">
-  <input id="valorDespesa" type="number" placeholder="Valor">
-  <button onclick="salvarDespesa()">Salvar</button>
-  <ul id="listaDespesas"></ul>
-</div>
-
-<!-- RELATÓRIO -->
-<div id="mensal" class="section">
-  <h2>Relatório Mensal</h2>
-  <input type="month" id="mesRelatorio">
-  <button onclick="gerarRelatorioMensal()">Gerar</button>
-  <div id="resumoMensal"></div>
-</div>
-
-</div>
-</div>
-
-<!-- JS ORIGINAL -->
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
