--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>PDV Barbearia</title>
+  <title>PDV Barbearia Profissional</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-  <h1>💈 PDV Barbearia</h1>
+  <h1>💈 Sistema de Barbearia</h1>
 
   <!-- ABERTURA DE CAIXA -->
   <div id="aberturaCaixa" class="card">
@@ -17,33 +17,39 @@
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
-  <!-- SISTEMA -->
   <div id="sistema" class="hidden">
+
+    <!-- PLANOS -->
+    <div class="card">
+      <h2>Planos</h2>
+      <input id="nomePlano" placeholder="Nome do plano">
+      <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
+      <input id="valorPlano" type="number" placeholder="Valor do plano">
+      <button onclick="cadastrarPlano()">Cadastrar Plano</button>
+    </div>
 
     <!-- CLIENTES -->
     <div class="card">
       <h2>Clientes</h2>
       <input id="nomeCliente" placeholder="Nome do cliente">
-      <input id="telCliente" placeholder="Telefone">
+      <select id="planoCliente"></select>
       <button onclick="cadastrarCliente()">Cadastrar Cliente</button>
     </div>
 
     <!-- SERVIÇOS -->
     <div class="card">
-      <h2>Serviços</h2>
-      <input id="nomeServico" placeholder="Nome do serviço">
-      <input id="precoServico" type="number" placeholder="Preço (R$)">
+      <h2>Serviços Avulsos</h2>
+      <input id="nomeServico" placeholder="Serviço">
+      <input id="precoServico" type="number" placeholder="Preço">
       <button onclick="cadastrarServico()">Cadastrar Serviço</button>
     </div>
 
     <!-- VENDA -->
     <div class="card">
-      <h2>Venda</h2>
-
+      <h2>Registrar Corte</h2>
       <select id="clienteVenda"></select>
       <select id="servicoVenda"></select>
-
-      <button onclick="registrarVenda()">Registrar Venda</button>
+      <button onclick="registrarVenda()">Registrar</button>
     </div>
 
     <!-- RESUMO -->
@@ -57,7 +63,7 @@
 
     <!-- HISTÓRICO -->
     <div class="card">
-      <h2>Histórico de Vendas</h2>
+      <h2>Histórico</h2>
       <ul id="listaVendas"></ul>
     </div>
 
