--- a/index.html
+++ b/index.html
@@ -1,74 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>PDV Barbearia Profissional</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Sistema Profissional de Barbearia</title>
+<link rel="stylesheet" href="style.css">
+
+<!-- jsPDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
 
-<div class="container">
-  <h1>💈 Sistema de Barbearia</h1>
+<!-- SPLASH COM FOTO -->
+<div id="splash" class="splash">
+  <div class="splash-overlay"></div>
+  <div class="splash-box">
+    <h1>💈 Barbearia</h1>
+    <p>Sistema profissional de gestão</p>
+    <button onclick="entrarSistema()">Entrar no sistema</button>
+  </div>
+</div>
 
-  <!-- ABERTURA DE CAIXA -->
+<div class="container">
+  <h2>💈 Sistema de Barbearia</h2>
+
   <div id="aberturaCaixa" class="card">
-    <h2>Abertura de Caixa</h2>
-    <input type="number" id="valorInicial" placeholder="Valor inicial (R$)">
+    <h3>Abertura de Caixa</h3>
+    <input type="number" id="valorInicial" placeholder="Valor inicial">
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
   <div id="sistema" class="hidden">
 
-    <!-- PLANOS -->
     <div class="card">
-      <h2>Planos</h2>
-      <input id="nomePlano" placeholder="Nome do plano">
-      <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
-      <input id="valorPlano" type="number" placeholder="Valor do plano">
-      <button onclick="cadastrarPlano()">Cadastrar Plano</button>
-    </div>
-
-    <!-- CLIENTES -->
-    <div class="card">
-      <h2>Clientes</h2>
+      <h3>Clientes</h3>
       <input id="nomeCliente" placeholder="Nome do cliente">
-      <select id="planoCliente"></select>
-      <button onclick="cadastrarCliente()">Cadastrar Cliente</button>
+      <button onclick="cadastrarCliente()">Cadastrar</button>
     </div>
 
-    <!-- SERVIÇOS -->
     <div class="card">
-      <h2>Serviços Avulsos</h2>
+      <h3>Serviços</h3>
       <input id="nomeServico" placeholder="Serviço">
       <input id="precoServico" type="number" placeholder="Preço">
-      <button onclick="cadastrarServico()">Cadastrar Serviço</button>
+      <button onclick="cadastrarServico()">Cadastrar</button>
     </div>
 
-    <!-- VENDA -->
     <div class="card">
-      <h2>Registrar Corte</h2>
+      <h3>Registrar Corte</h3>
       <select id="clienteVenda"></select>
       <select id="servicoVenda"></select>
       <button onclick="registrarVenda()">Registrar</button>
     </div>
 
-    <!-- RESUMO -->
     <div class="card">
-      <h2>Resumo do Caixa</h2>
+      <h3>Resumo do Caixa</h3>
       <p>Inicial: R$ <span id="resInicial"></span></p>
       <p>Vendas: R$ <span id="resVendas"></span></p>
       <p><strong>Total: R$ <span id="resTotal"></span></strong></p>
-      <button class="fechar" onclick="fecharCaixa()">Fechar Caixa</button>
+      <button onclick="gerarPDF()">📄 Fechar Caixa (PDF)</button>
+      <button class="fechar" onclick="fecharCaixa()">Encerrar Caixa</button>
     </div>
 
-    <!-- HISTÓRICO -->
     <div class="card">
-      <h2>Histórico</h2>
+      <h3>Histórico</h3>
       <ul id="listaVendas"></ul>
     </div>
 
   </div>
-
 </div>
 
 <script src="script.js"></script>
