--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Sistema Profissional de Barbearia</title>
 <link rel="stylesheet" href="style.css">
 
-<!-- jsPDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -22,13 +21,14 @@
 
 <div class="app">
 
-  <!-- MENU LATERAL -->
-  <aside class="sidebar">
-    <button onclick="abrirTela('vendas')">💈<span>Vendas</span></button>
+  <!-- MENU -->
+  <nav class="menu">
+    <button onclick="abrirTela('vendas')" class="ativo">💈<span>Vendas</span></button>
     <button onclick="abrirTela('clientes')">👤<span>Clientes</span></button>
+    <button onclick="abrirTela('planos')">📦<span>Planos</span></button>
     <button onclick="abrirTela('servicos')">✂️<span>Serviços</span></button>
     <button onclick="abrirTela('caixa')">💰<span>Caixa</span></button>
-  </aside>
+  </nav>
 
   <!-- CONTEÚDO -->
   <main class="content">
@@ -36,7 +36,7 @@
     <!-- VENDAS -->
     <section id="vendas" class="tela ativa vendas-bg">
       <div class="card transparente">
-        <h2>Registrar Venda</h2>
+        <h2>Registrar Corte</h2>
         <select id="clienteVenda"></select>
         <select id="servicoVenda"></select>
         <button onclick="registrarVenda()">Registrar</button>
@@ -46,16 +46,28 @@
     <!-- CLIENTES -->
     <section id="clientes" class="tela">
       <div class="card">
-        <h2>Cadastro de Clientes</h2>
+        <h2>Clientes</h2>
         <input id="nomeCliente" placeholder="Nome do cliente">
+        <select id="planoCliente"></select>
         <button onclick="cadastrarCliente()">Cadastrar</button>
+      </div>
+    </section>
+
+    <!-- PLANOS -->
+    <section id="planos" class="tela">
+      <div class="card">
+        <h2>Planos</h2>
+        <input id="nomePlano" placeholder="Nome do plano">
+        <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
+        <input id="valorPlano" type="number" placeholder="Valor do plano">
+        <button onclick="cadastrarPlano()">Cadastrar</button>
       </div>
     </section>
 
     <!-- SERVIÇOS -->
     <section id="servicos" class="tela">
       <div class="card">
-        <h2>Cadastro de Serviços</h2>
+        <h2>Serviços</h2>
         <input id="nomeServico" placeholder="Serviço">
         <input id="precoServico" type="number" placeholder="Preço">
         <button onclick="cadastrarServico()">Cadastrar</button>
@@ -66,7 +78,7 @@
     <section id="caixa" class="tela">
       <div class="card">
         <h2>Abertura de Caixa</h2>
-        <input type="number" id="valorInicial" placeholder="Valor inicial">
+        <input id="valorInicial" type="number" placeholder="Valor inicial">
         <button onclick="abrirCaixa()">Abrir Caixa</button>
       </div>
 
@@ -75,7 +87,7 @@
         <p>Inicial: R$ <span id="resInicial"></span></p>
         <p>Vendas: R$ <span id="resVendas"></span></p>
         <p><strong>Total: R$ <span id="resTotal"></span></strong></p>
-        <button onclick="gerarPDF()">📄 Fechamento (PDF)</button>
+        <button onclick="gerarPDF()">📄 Fechar Caixa (PDF)</button>
         <button class="fechar" onclick="fecharCaixa()">Encerrar Caixa</button>
       </div>
     </section>
