--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
   <!-- MENU -->
   <nav class="menu">
-    <button onclick="abrirTela('vendas')" class="ativo">💈<span>Vendas</span></button>
-    <button onclick="abrirTela('clientes')">👤<span>Clientes</span></button>
-    <button onclick="abrirTela('planos')">📦<span>Planos</span></button>
-    <button onclick="abrirTela('servicos')">✂️<span>Serviços</span></button>
-    <button onclick="abrirTela('caixa')">💰<span>Caixa</span></button>
+    <button onclick="abrirTela('vendas')">💈</button>
+    <button onclick="abrirTela('clientes')">👤</button>
+    <button onclick="abrirTela('planos')">📦</button>
+    <button onclick="abrirTela('servicos')">✂️</button>
+    <button onclick="abrirTela('caixa')">💰</button>
   </nav>
 
   <!-- CONTEÚDO -->
@@ -58,8 +58,8 @@
       <div class="card">
         <h2>Planos</h2>
         <input id="nomePlano" placeholder="Nome do plano">
-        <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
-        <input id="valorPlano" type="number" placeholder="Valor do plano">
+        <input id="qtdPlano" type="number" placeholder="Qtd cortes">
+        <input id="valorPlano" type="number" placeholder="Valor">
         <button onclick="cadastrarPlano()">Cadastrar</button>
       </div>
     </section>
